state_machine_procmacro/tests/trybuild/tuple_zero_item_event_variant_fail.rs
use state_machine_procmacro::fsm;

fsm! {
    Simple

    One --(A(), on_a)--> Two
}

fn main() {}
